fixes info box positioning and size, and adds jump to bubble 1

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -125,14 +125,14 @@ input {
   width: 100%;
   z-index:1002;
   position: fixed;
-  top: 45%;
+  top: 30%;
   animation: slideFromTop 2s ease-in-out; 
 }
 
 #info-box div {
   margin: 0 auto;
-  width:50%;
-  padding: 30px 30px 40px 30px;  
+  width: 570px;
+  padding: 10px 30px 50px 30px;  
   background-color:#fff;
   opacity:1;
   border-radius: 10px;
@@ -140,7 +140,6 @@ input {
 }
 
 #info-box h1 {
-  margin: 0;
   text-align: center;
 }
 
@@ -152,14 +151,9 @@ input {
 
 @keyframes slideFromTop {
   0%   {top: 0%;}
-  50% {top: 50%;}
-  75% {top: 43%;}
-  100% {top:45%;}
-}
-
-.highlight {
-  opacity:1;
-  z-index:1002;
+  50% {top: 35%;}
+  75% {top: 25%;}
+  100% {top:30%;}
 }
 
 .theme-img-index img {
@@ -227,12 +221,6 @@ input {
 	height: 100px;
 	bottom: 55%;
 	left: 10%;
-  animation: zIndexUp 2s ease-in-out;
-}
-
-@keyframes zIndexUp {
-  0%   {z-index: 0;}
-  100% {z-index: 1;}
 }
 
 #question-bubble-2 {
@@ -849,11 +837,12 @@ input#img-4:checked ~ .nav-dots label#img-dot-4 {
   }
 
   #info-box {
-    top: 40%;
+    top: 30%;
   }
 
   #info-box div {
-    padding: 10px 10px 15px 10px;  
+    padding: 10px 10px 25px 10px;
+    width: 50%;  
   }
 
   #info-box ol {
@@ -862,6 +851,12 @@ input#img-4:checked ~ .nav-dots label#img-dot-4 {
 
   #info-box h1 {
     font-size: 20px;
+  }
+  @keyframes slideFromTop {
+    0%   {top: 0%;}
+    50% {top: 35%;}
+    75% {top: 25%;}
+    100% {top: 30%;}
   }
 }
 
@@ -1035,9 +1030,6 @@ input#img-4:checked ~ .nav-dots label#img-dot-4 {
   }
   #info-box {
     top: 25%;
-  }
-  .highlight {
-    z-index: 1;
   }
   #back-to-themes {
     font-size: 12px;
